0.7.3:

* Enable files to be created from ERB templates

* Only apply SELinux boolean changes if SELinux is enabled

0.7.2:

* Realize groups before users so that user primary groups exist when the user
is created.

* Make 'include system' work again (thanks mkm85) by avoiding mandatory
parameters in network and adding checks instead.

* Do not restart the network service when config file changes are made as this
sometimes causes issues (like the default route going missing).  This should
be fixed in a later release but for now the network service must be manually
restarted.

0.7.1:

* Added ldif2users script to create user/group config from an LDAP export

* Fixed bugs in user and group realize preventing hiera data lookup from
working and fixed silly typos in routes.pp

0.7.0:

* By default virtual user and group resources are now created that must then
be realized rather than real resources as before.  This allows all of the user
and group configuration to be added to a common part of the hiera hierarchy
but only the relevent users and groups created on each host.

To create real resources instead (and make things work as they did with
earlier versions of this module) use:

    system::users::real:  'true'
    system::groups::real: 'true'

* Added support for basic networking: set hostname, enable/disable
zeroconf/IPv6, set the default route, configure interfaces and their static
routes, configure nameserver resolvers and domains

* Manage NTP servers in /etc/ntp.conf

0.6.3:

* Added support for managing SELinux booleans

0.6.2:

* Facts that have array values now create multiple facts with the array index
as a suffix.  For example:

    system::facts:
      software: [ 'jboss', 'httpd' ]
    
creates the facts:

    software0: 'jboss'
    software1: 'httpd'

0.6.1:

* Set custom facts using the facter_dot_d Facter plugin that loads facts from
/etc/facter/facts.d.  Set 'system::facts::cleanold: true' to remove facts from