@@ -5,6 +5,10 @@ system::augeas:
       - 'set server[1] 0.uk.pool.ntp.org'
       - 'set server[2] 1.uk.pool.ntp.org'
       - 'set server[3] 2.uk.pool.ntp.org'
+  'postfix':
+    context: '/files/etc/postfix/main.cf'
+    changes:
+      - 'set relayhost 10.182.4.3'
 
 system::crontabs:
   'logrotate':
@@ -14,13 +18,8 @@ system::crontabs:
     minute:  '0'
 
 system::execs:
-  'update-tomcat-deploy':
-    command: '/usr/bin/svn up'
-    cwd:     '/apps/tomcat1/deploy'
-    user:    'tomcat1'
-  'create-deploy-dir':
-    command: '/bin/mkdir -p /apps/tomcat1/deploy'
-    unless:  '/usr/bin/test -d /apps/tomcat1/deploy'
+  "/usr/bin/perl -pi -e 's: grep 1.6: egrep \"1.6/1.7\":' /apps/wso2esb1/product/wso2esb/bin/wso2server.sh":
+    onlyif: '/bin/grep -w "grep 1.6" /apps/wso2esb1/product/wso2esb/bin/wso2server.sh'
 
 system::facts:
   location:
@@ -77,11 +76,14 @@ system::limits:
       soft: 2048
       hard: 2048
 
-system::mailaliases:
-  postmaster:
-    recipient: 'root'
-  webmaster:
-    recipient: 'fred@domain.com'
+system::mail:
+  aliases:
+    postmaster:
+      recipient: 'root'
+    webmaster:
+      recipient: 'fred@domain.com'
+  relayhost:     'mail.domain.com'
+  type:          'postfix'
 
 system::mounts:
   '/home':
